Little ProductPage fix for Firefox
Add extra margin-bottom to avoid sizes buttons under
add to bag button.

--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -147,6 +147,7 @@
   display: flex;
   justify-content: left;
   align-items: center;
+  margin-bottom: 6rem;
 }
 
 .product__filter {
